syntax = "proto3";

message TileMapTx {
  string data = 1;
}

message TileMapState {
  string data = 1;
}

message PixelMaps {
  message TileMapLine {
    string color = 1;
    int64 size = 2;
    float startx = 3;
    float starty = 4;
    float endx = 5;
    float endy = 6;
    repeated int32 pixels = 7;
  }
  repeated TileMapLine linesArray = 1;
}